syntax = "proto3";

package pb;
import "barber/barber_shops.proto";


option go_package = "barbershop/src/pb/barber";


message FindBarberShopsNearbyRequest {
    float longitude = 4;
    float latitude = 5;
    int32 distance_in_meters = 6;
}

message FindBarberShopsNearbyResponse {
    repeated BarberShops barber_shop = 1;
}